--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="sidebar-wrapper">
             <div class="profile-container">
                 <img class="profile" src="assets/images/profile.png" alt="" />
-                <h1 class="name">Roberth Méndez</h1>
-                <h3 class="tagline">El Inge más lindo de Colombia</h3>
+                <h1 class="name">Roberth Santiago Méndez Rivera</h1>
+                <h3 class="tagline">El Inge más lindo del mundo</h3>
             </div><!--//profile-container-->
             
             <div class="contact-container container-block">
