--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="wrapper mt-lg-5">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/profile.png" alt="" />
+                <img class="profile" src="assets/images/perfil.jpg" alt="" />
                 <h1 class="name">Roberth Santiago Méndez Rivera</h1>
                 <h3 class="tagline">El Inge más lindo del mundo</h3>
             </div><!--//profile-container-->
